--- a/week3/main.html
+++ b/week3/main.html
@@ -1,125 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Array Cardio 💪</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles.css" />
 
-  </head>
-  <body>
-    <header>
-        <h1>Group 1</h1>
-        <h2>Week 3 Team Activity - Array Methods</h2>
-    </header>
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-    <script>
-      // Get your shorts on - this is an array workout!
-      // ## Array Cardio Day 1
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Array Cardio 💪</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../styles.css" />
 
-      // Some data we can work with
+</head>
 
-      const inventors = [
-        { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
-        { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
-        { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
-        { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
-        { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
-        { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
-        { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
-        { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
-        { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
-        { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
-        { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
-        { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
-      ];
+<body>
+  <header>
+    <h1>Group 1</h1>
+    <h2>Week 3 Team Activity - Array Methods</h2>
+  </header>
+  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <script>
+    // Get your shorts on - this is an array workout!
+    // ## Array Cardio Day 1
 
-      const people = [
-        'Beck, Glenn',
-        'Becker, Carl',
-        'Beckett, Samuel',
-        'Beddoes, Mick',
-        'Beecher, Henry',
-        'Beethoven, Ludwig',
-        'Begin, Menachem',
-        'Belloc, Hilaire',
-        'Bellow, Saul',
-        'Benchley, Robert',
-        'Benenson, Peter',
-        'Ben-Gurion, David',
-        'Benjamin, Walter',
-        'Benn, Tony',
-        'Bennington, Chester',
-        'Benson, Leana',
-        'Bent, Silas',
-        'Bentsen, Lloyd',
-        'Berger, Ric',
-        'Bergman, Ingmar',
-        'Berio, Luciano',
-        'Berle, Milton',
-        'Berlin, Irving',
-        'Berne, Eric',
-        'Bernhard, Sandra',
-        'Berra, Yogi',
-        'Berry, Halle',
-        'Berry, Wendell',
-        'Bethea, Erin',
-        'Bevan, Aneurin',
-        'Bevel, Ken',
-        'Biden, Joseph',
-        'Bierce, Ambrose',
-        'Biko, Steve',
-        'Billings, Josh',
-        'Biondo, Frank',
-        'Birrell, Augustine',
-        'Black, Elk',
-        'Blair, Robert',
-        'Blair, Tony',
-        'Blake, William'
-      ];
+    // Some data we can work with
 
-      // Array.prototype.filter()
-      // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventors = [
+      { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
+      { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
+      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
+      { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
+      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
+      { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
+      { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
+      { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
+      { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
+      { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
+      { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
+      { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
+    ];
 
-      // Array.prototype.map()
-      // 2. Give us an array of the inventors' first and last names
+    const people = [
+      'Beck, Glenn',
+      'Becker, Carl',
+      'Beckett, Samuel',
+      'Beddoes, Mick',
+      'Beecher, Henry',
+      'Beethoven, Ludwig',
+      'Begin, Menachem',
+      'Belloc, Hilaire',
+      'Bellow, Saul',
+      'Benchley, Robert',
+      'Benenson, Peter',
+      'Ben-Gurion, David',
+      'Benjamin, Walter',
+      'Benn, Tony',
+      'Bennington, Chester',
+      'Benson, Leana',
+      'Bent, Silas',
+      'Bentsen, Lloyd',
+      'Berger, Ric',
+      'Bergman, Ingmar',
+      'Berio, Luciano',
+      'Berle, Milton',
+      'Berlin, Irving',
+      'Berne, Eric',
+      'Bernhard, Sandra',
+      'Berra, Yogi',
+      'Berry, Halle',
+      'Berry, Wendell',
+      'Bethea, Erin',
+      'Bevan, Aneurin',
+      'Bevel, Ken',
+      'Biden, Joseph',
+      'Bierce, Ambrose',
+      'Biko, Steve',
+      'Billings, Josh',
+      'Biondo, Frank',
+      'Birrell, Augustine',
+      'Black, Elk',
+      'Blair, Robert',
+      'Blair, Tony',
+      'Blake, William'
+    ];
 
-      // Array.prototype.sort()
-      // 3. Sort the inventors by birthdate, oldest to youngest
+    // Array.prototype.filter()
+    // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventorsBornIn1500s = inventors.filter(birthYear => {
+      return (birthYear.year >= 1500 && birthYear.year <= 1599);
+    });
 
-      // Array.prototype.reduce()
-      // 4. How many years did all the inventors live?
+    // Array.prototype.map()
+    // 2. Give us an array of the inventors' first and last names
+    const inventorsName = inventors.map(fullName => {
+      return `${fullName.first} ${fullName.last}`;
+    });
+    console.log(inventorsName);
 
-      // 5. Sort the inventors by years lived
+    // Array.prototype.sort()
+    // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortBirthDate = inventors.sort((a, b) => {
+      return a.year - b.year;
+    });
+    console.log(sortBirthDate);
 
-      // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
-      // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-      // goto the link above and open the console. Paste the following two lines in.  That will create a list of links in memory that you can reference through the console. Use that list to finish the problem.
-      // const category = document.querySelector('.mw-category');
-      // const links = Array.from(category.querySelectorAll('a'));
+    // Array.prototype.reduce()
+    // 4. How many years did all the inventors live?
 
-      // 7. sort Exercise
-      // Sort the people alphabetically by last name
+    // 5. Sort the inventors by years lived
 
-      // 8. Reduce Exercise
-      // Sum up the instances of each of these
-      const data = [
-        'car',
-        'car',
-        'truck',
-        'truck',
-        'bike',
-        'walk',
-        'car',
-        'van',
-        'bike',
-        'walk',
-        'car',
-        'van',
-        'car',
-        'truck'
-      ];
-    </script>
-  </body>
+    // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
+    // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // goto the link above and open the console. Paste the following two lines in.  That will create a list of links in memory that you can reference through the console. Use that list to finish the problem.
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+
+    // 7. sort Exercise
+    // Sort the people alphabetically by last name
+
+    // 8. Reduce Exercise
+    // Sum up the instances of each of these
+    const data = [
+      'car',
+      'car',
+      'truck',
+      'truck',
+      'bike',
+      'walk',
+      'car',
+      'van',
+      'bike',
+      'walk',
+      'car',
+      'van',
+      'car',
+      'truck'
+    ];
+  </script>
+</body>
+
 </html>
