css and html for week 4

--- a/week04/main.html
+++ b/week04/main.html
@@ -14,7 +14,20 @@
     </header>
     <section>
       <a href="../index.html">Back to homepage</a>
-    </section>
+      <section id = "gameWrapper">
+        <div id = "topLeft"></div>
+        <div id = "topMiddle"></div>
+        <div id = "topRight"></div>
 
+        <div id = "middleLeft"></div>
+        <div id = "middleMiddle"></div>
+        <div id = "middleRight"></div>
+
+        <div id = "bottomLeft"></div>
+        <div id = "bottomMiddle"></div>
+        <div id = "bottomRight"></div>
+      </section>
+    </section>
+  <script src = "scripts.js"></script>
   </body>
 </html>
