trying to figure out touchend

--- a/week04/main.html
+++ b/week04/main.html
@@ -15,17 +15,17 @@
     <section>
       <a href="../index.html">Back to homepage</a>
       <section id = "gameWrapper">
-        <div id = "topLeft"></div>
-        <div id = "topMiddle"></div>
-        <div id = "topRight"></div>
+        <div></div>
+        <div></div>
+        <div></div>
 
-        <div id = "middleLeft"></div>
-        <div id = "middleMiddle"></div>
-        <div id = "middleRight"></div>
+        <div></div>
+        <div></div>
+        <div></div>
 
-        <div id = "bottomLeft"></div>
-        <div id = "bottomMiddle"></div>
-        <div id = "bottomRight"></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </section>
     </section>
   <script src = "scripts.js"></script>
