--- a/week4/w04TeamActivity.html
+++ b/week4/w04TeamActivity.html
@@ -24,6 +24,9 @@
             <h2>Tic-Tac-Toe</h2>
             <hr>
             <div id="content">
+                <div id="displayDiv" class="display">
+
+                </div>
                 <div class="board">
                     <div class="square" id="topLeft"></div>
                     <div class="square" id="topMiddle"></div>
@@ -35,15 +38,12 @@
                     <div class="square" id="bottomMiddle"></div>
                     <div class="square" id="bottomRight"></div>
                 </div>
-
-                <input type="submit" onclick="resetBoard()" Value="reset" />
-                <div id="displayDiv">
-
+                <div class="footerBotton">
+                    <input type="submit" onclick="resetBoard()" Value="reset" />
                 </div>
             </div>
         </div>
     </div>
-    
 </body>
 
 </html>
