--- a/week5/mvc/index.html
+++ b/week5/mvc/index.html
@@ -14,6 +14,6 @@
       <ul id="hikes" class="hikeStyles"></ul>
     </main>
 
-    <script src="app5.js" type="module"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
