--- a/week7/mvc/index.html
+++ b/week7/mvc/index.html
@@ -13,6 +13,7 @@
   <main>
     <h1>Great hikes</h1>
     <ul id="hikes" class="hikeStyles"></ul>
+    <section id="comments"></section>
   </main>
 
   <script src="main.js" type="module"></script>
